--- a/public/locale/en/translation.json
+++ b/public/locale/en/translation.json
@@ -1,9 +1,11 @@
 {
-    "home": "Home",
-    "about": "About",
-    "shop": "Shop",
-    "faq": "FAQ",
-    "contact": "Contact",
-    "ourProjects": "OUR PROJECTS"
-  }
-  
+  "home": "Home",
+  "about": "About",
+  "shop": "Shop",
+  "faq": "FAQ",
+  "contact": "Contact",
+  "logOut": "Log Out",
+  "wishlist": "Wishlist",
+  "cart": "Cart",
+  "login": "Login"
+}
